# tinted-builder-rust

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSES-THIRD-PARTY.md  Makefile  README.md  THIRD_PARTY_LICENSES.md  about.toml  action.yml  deny.toml  flake.nix  justfile  license.html  output  tinted8-something.yaml
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: auto-assign-issues.yml  ci.yml  lint.yml  msrv.yml  pr.yml  publish-crate.yml  push-ghcr-image.yml  release.yml  setup-environment.yml  tag-release.yml  test.yml  tests.yml  update-docker-image.yml
scripts/: package_build
specs/: builder.md  styling.md
src/: cli.rs  commands.rs  config.rs  constants.rs  lib.rs  main.rs  utils.rs
src/operations/: build.rs  mod.rs  sync.rs
tests/: operation_build.rs  operation_sync.rs
tests/common/: mod.rs
tests/fixtures/rendered/: base16-mixed-silk-light.md  base16-silk-light.md  base24-dracula.md
tests/fixtures/schemes/base16/: silk-light.yaml
tests/fixtures/templates/: base16-config.yaml  base16-template.mustache  base24-template.mustache  mixed-config.yaml
tinted-builder/: CHANGELOG.md  Cargo.toml  README.md  build.rs
tinted-builder-rust/: Cargo.toml  README.md
tinted-builder-rust/src/: cli.rs  helpers.rs  lib.rs  main.rs  utils.rs
tinted-builder-rust/src/operations/: build.rs  mod.rs  sync.rs
tinted-builder-rust/tests/: build_flow.rs  operation_build.rs  operation_sync.rs  test_utils.rs  utils.rs
tinted-builder-rust/tests/common/: mod.rs
tinted-builder-rust/tests/fixtures/rendered/: base16-mixed-silk-light.md  base16-silk-light.md  base24-dracula.md  list-tinted8.md  list.md  listbase16.md  listbase24.md
tinted-builder-rust/tests/fixtures/schemes/base16/: silk-light.yaml
tinted-builder-rust/tests/fixtures/schemes/base24/: dracula.yaml
tinted-builder-rust/tests/fixtures/schemes/tinted8/: catppuccin-mocha.yaml  gruvbox-dark.yaml
tinted-builder-rust/tests/fixtures/templates/: base16-config.yaml  base16-template.mustache  base24-config.yaml  base24-template.mustache  list-config.yaml  list-template.mustache  list-tinted8-config.yaml  list-tinted8-template.mustache  mixed-config.yaml
tinted-builder/docs/: wasm.md
tinted-builder/src/: constants.rs  error.rs  lib.rs  main.rs  scheme.rs  template.rs  utils.rs  wasm.rs
tinted-builder/src/scheme/: base.rs  base16.rs  base24.rs  color.rs  mod.rs  tinted8.rs  tmtheme.rs
tinted-builder/src/scheme/tinted8/: structure.rs  syntax_schema.yaml  yaml.rs
tinted-builder/src/scheme/tinted8/structure/: meta.rs  palette.rs  syntax.rs  ui.rs
tinted-builder/src/template/: base16.rs  tinted8.rs  tmtheme.rs  yaml.rs
tinted-builder/tests/: general.rs  tinted8.rs
tinted-builder/wit/: world.wit
