[package]
name = "builder-rust"
description = "A builder tool to generate template themes"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Jamy Golden <code@jamygolden.com>", "Tinted Theming <tintedtheming@proton.me>"]
homepage = "https://github.com/tinted-theming/builder-rust"
repository = "https://github.com/tinted-theming/builder-rust"
keywords = ["cli", "base16", "shell", "tinted-theming"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.75"
clap = "4.4.10"
dirs = "5.0.1"
ramhorns = "0.14.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
strip-ansi-escapes = "0.2.0"
unicode-normalization = "0.1.23"

[[bin]]
name = "builder-rust"
path = "src/main.rs"
