[package]
name = "tinted-builder-rust"
description = "A Tinted Theming template builder which uses yaml color schemes to generate theme files."
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
authors = ["Jamy Golden <code@jamygolden.com>", "Tinted Theming <tintedtheming@proton.me>"]
homepage = "https://github.com/tinted-theming/tinted-builder-rust"
repository = "https://github.com/tinted-theming/tinted-builder-rust"
keywords = ["cli", "base16", "base24", "tinted-theming"]
categories = ["command-line-utilities", "library", "serialization"]

[dependencies]
anyhow = "1.0.80"
clap = "4.5.2"
dirs = "5.0.1"
ramhorns = "0.14.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
unicode-normalization = "0.1.23"

[dev-dependencies]
strip-ansi-escapes = "0.2.0"

[[bin]]
name = "tinted-builder-rust"
path = "src/main.rs"
