[package]
name = "tinted-builder-rust"
version = "0.14.0"
edition = "2021"
authors = ["Jamy Golden <code@jamygolden.com>", "Tinted Theming <tintedtheming@proton.me>"]
license = "MIT OR Apache-2.0"
description = "Simple rendering of mustache templates"
keywords = ["mustache", "template"]
categories = ["template-engine"]
homepage = "https://github.com/tinted-theming/tinted-builder-rust"
repository = "https://github.com/tinted-theming/tinted-builder-rust"
documentation = "https://github.com/tinted-theming/tinted-builder-rust"
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
clap = "4.5.51"
dirs = "6.0.0"
regex = "1.12.2"
ribboncurls = "0.5.0"
serde = "1.0.228"
serde_yaml = "0.9.34"
which = "8.0.0"

[dev-dependencies]
strip-ansi-escapes = "0.2.1"

[dependencies.tinted-builder]
path = "../tinted-builder"
version = "0.10.0"

[[bin]]
name = "tinted-builder-rust"
path = "src/main.rs"

[lints.clippy]
pedantic    = { level = "deny", priority = -1 }
nursery     = { level = "deny", priority = -1 }
unwrap_used = "deny"
