[package]
name = "tinted-builder"
description = "A Tinted Theming template builder which uses yaml color schemes to generate theme files."
version = "0.10.1"
edition = "2021"
license = "GPL-3.0-only"
readme = "README.md"
authors = ["Jamy Golden <code@jamygolden.com>", "Tinted Theming <tintedtheming@proton.me>"]
homepage = "https://github.com/tinted-theming/tinted-builder-rust"
repository = "https://github.com/tinted-theming/tinted-builder-rust"
keywords = ["cli", "base16", "base24", "tinted-theming"]
categories = ["command-line-utilities", "template-engine"]
rust-version = "1.74.0"

[dependencies]
dirs = "6.0.0"
palette = "0.7.6"
quick-xml = { version = "0.38.3", features = ["serialize"] }
regex = "1.12.2"
ribboncurls = "0.5.0"
semver = "1.0.27"
serde = "1.0.228"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
unicode-normalization = "0.1.25"

[dev-dependencies]
anyhow = "1.0.100"
strip-ansi-escapes = "0.2.1"

[lints.clippy]
pedantic      = { level = "deny", priority = -1 }
nursery       = { level = "deny", priority = -1 }
unwrap_used   = "deny"
